# Football-Manager

c_version/: Makefile.am  Makefile.in  drv_linux.c  eos.c  fm  fm.c  fm.h  fm0.sav  font.c  init.c  io.c  main.c  matchday.c  menu.c  misc.c
highlights/: build.settings  config.lua  highlights.lua  main.lua  match.c
miscellany/: manager.coffee  subway.GlyphProject
players/: main.lua
source/: build.settings  config.lua  framework  main.lua  utils
source/fonts/: mainfont.fnt
source/game/: highlights.lua
source/gfx/: ball.lua  player.lua
source/highlights/: manager.lua  members.lua
